# zerocode

./: .gitignore  Cargo.toml  LICENSE  NOTICE  PRIVACY.md  README.md  clippy.toml  durable_jobs.py  install.sh  justfile  rust-toolchain.toml  rustfmt.toml
crates/acp/: Cargo.toml
crates/acp/src/: lib.rs  tests.rs
crates/api/: Cargo.toml
crates/api/src/: client.rs  error.rs  lib.rs  oauth_store.rs  otlp.rs  prompt_cache.rs  quota.rs  quota_shared.rs  sse.rs  sync_bridge.rs  token_counting.rs  types.rs
crates/api/src/providers/: anthropic.rs  aws_sigv4.rs  chatgpt_backend.rs  cloud_gateway.rs  gemini_code_assist.rs  google_auth.rs  mod.rs  model_context_windows.json  openai_oauth.rs  retry_backoff.rs
crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs  retry_jitter_bench.rs
crates/codegraph/: Cargo.toml
crates/codegraph/src/: extract.rs  index.rs  lib.rs  model.rs  tests.rs
crates/codegraph/src/language/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs  mcp_command.rs  plugins_agents.rs  prompt_commands.rs  remote_command.rs  slash_commands.rs  slash_registry.rs  tests.rs
crates/commands/src/slash_help/: mod.rs  specs.rs
crates/compat-harness/: Cargo.toml
crates/compat-harness/src/: deep.rs  deep_lane.rs  diff_hygiene.rs  fairness.rs  lib.rs  manifest.rs  regression.rs  runner.rs  semantic_probes.rs  suite.rs  summary.rs
crates/compat-harness/src/deep/: tests.rs
crates/core-types/: Cargo.toml
crates/core-types/src/: card.rs  command_category.rs  council.rs  date.rs  hex.rs  json.rs  lane_events.rs  lib.rs  memory.rs  oauth.rs  paths.rs  permissions.rs  retry_signal.rs  sse.rs  text.rs
crates/core-types/src/session/: compaction.rs  error.rs  fork.rs  json_field.rs  message.rs  mod.rs  tests.rs
crates/core-types/src/usage/: dashboard.rs  mod.rs  pricing.rs  rate_limit.rs  tests.rs  tracker.rs
crates/mock-anthropic-service/: Cargo.toml
crates/mock-anthropic-service/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: builtin.rs  error.rs  install.rs  installed.rs  lib.rs  manager.rs  manifest.rs  manifest_io.rs  path_validators.rs  plugin.rs  process_runner.rs  registry.rs  tests.rs  tool.rs  util.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: auto_format.rs  bash.rs  command_palette.rs  compact_diff.rs  context_compression.rs  convert_messages.rs  file_ops.rs  file_read_registry.rs  fuzzy_file_picker.rs  git_snapshot.rs  hooks.rs  image_guard.rs  jsonl_log.rs  lib.rs  live_output.rs  mcp.rs  mcp_client.rs  mcp_http.rs  mcp_http_common.rs  mcp_limits.rs  mcp_oauth.rs  mcp_sse.rs  mcp_ws.rs  model_catalog.rs  model_inventory.rs  notifications.rs  oauth.rs  permission.rs  permission_enforcer.rs  permissions.rs  plugin_lifecycle.rs  recovery_recipes.rs  registry_io.rs  retry.rs  sandbox.rs  secure_fs.rs  session_control.rs  skills.rs  task_packet.rs  task_registry.rs  (+7 more)
crates/runtime/src/bash_validation/: classify.rs  mod.rs  parse.rs  tests.rs
crates/runtime/src/compact/: mod.rs  tests.rs
crates/runtime/src/config/: mod.rs  parsers.rs  tests.rs
crates/runtime/src/conversation/: api.rs  compaction.rs  config.rs  deep_gate.rs  error.rs  fallback.rs  helpers.rs  mod.rs  reminders.rs  repetition.rs  streaming.rs  streaming_turn.rs  team_inbox.rs  tests.rs  tool.rs  tool_call_salvage.rs  turn_end.rs  turn_end_gate.rs  turn_support.rs  verify_treadmill.rs
crates/runtime/src/lsp_client/: mod.rs  tests.rs
crates/runtime/src/mcp_stdio/: error.rs  mod.rs  process.rs  tests.rs  types.rs
crates/runtime/src/memory/: classification.rs  curation.rs  dreamer.rs  embed_fastembed.rs  mod.rs  paths.rs  recall.rs
crates/runtime/src/message_stream/: mod.rs  projection.rs  provider.rs  types.rs
crates/runtime/src/model_router/: assignment.rs  calibration.rs  inventory.rs  learned.rs  mod.rs  outcome.rs  policy.rs  probe.rs  selector.rs  target.rs  tests.rs
crates/runtime/src/prompt/: mod.rs  output_style.rs  sections.rs  tests.rs
crates/runtime/tests/: anthropic_parser_with_events.rs  compact_streaming.rs  conversation_streaming_basic.rs  conversation_streaming_seam.rs  deep_gate_live.rs  message_stream_anthropic.rs  message_stream_anthropic_http_basic.rs  permission_async.rs
crates/tools/: .gitignore  Cargo.toml
crates/tools/src/: aliases.rs  artifacts.rs  bash_tools.rs  codegraph_tools.rs  context.rs  dispatch.rs  error.rs  fanout.rs  file_tools.rs  file_write_lease.rs  gateway.rs  http_bridge.rs  hunk_attribution.rs  lib.rs  mcp_tools.rs  model_json.rs  plan_mode_v2.rs  preflight.rs  registry.rs  task_tools.rs  team_inbox_store.rs  team_tools.rs  typed_actions.rs  web_tools.rs  worker_tools.rs  workspace_checkpoint.rs  workspace_scope_guard.rs  worktree_tools.rs
crates/tools/src/misc_tools/: agent_tools.rs  audit.rs  config_tools.rs  council.rs  dispatch.rs  fanout_isolation.rs  mod.rs  notebook_tools.rs  retrieve_output.rs  session_recall.rs  skill_tools.rs  specs.rs  tests.rs
crates/tools/src/tests/: agent.rs  (+6 more)
crates/zo-cli/: Cargo.toml  build.rs
crates/zo-cli/remote-web/: app.js  index.html  manifest.webmanifest  remote-state.js  remote-state.test.mjs  styles.css  sw.js
crates/zo-cli/src/: acp_host.rs  attach.rs  attach_tui.rs  auth.rs  cli_args.rs  cli_support.rs  cli_tool_executor.rs  command_reports.rs  conversation_support.rs  doctor.rs  formatting.rs  git_helpers.rs  init.rs  input.rs  lib.rs  main.rs  main_dispatch.rs  permission_mode.rs  render.rs  response_events.rs  resume.rs  runtime_support.rs  self_update.rs  serve.rs  serve_auth.rs  serve_protocol.rs  session_format.rs  session_registry.rs  status_actions.rs  tests.rs  tool_formatting.rs  workspace_reports.rs  workspace_trust.rs
crates/zo-cli/tests/: cli_flags_and_config_defaults.rs  doctor_command.rs  mock_parity.rs  ndjson_sink.rs  remote_web_assets.rs  resume_slash_commands.rs  session_integration.rs  slash_commands_implemented.rs  tui_blocks.rs  tui_foundation.rs  tui_history.rs  tui_hud.rs  tui_input.rs  tui_modals.rs  tui_transcript.rs
(+331 files in other folders)
