[package]
name = "acp"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
agent-client-protocol = { version = "=1.2.0", features = ["unstable"] }
futures-util.workspace = true
runtime = { path = "../runtime" }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-std", "macros", "sync"] }
tokio-util = { workspace = true, features = ["compat"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "rt", "sync", "time"] }

[lints]
workspace = true
