[package]
name = "codegraph"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ignore = "0.4"
rayon = "1"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tree-sitter = "=0.26.11"
tree-sitter-go = "=0.25.0"
tree-sitter-javascript = "=0.25.0"
tree-sitter-python = "=0.25.0"
tree-sitter-rust = "=0.24.2"
tree-sitter-typescript = "=0.23.2"

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
