[package]
name = "commands"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
core-types = { path = "../core-types" }
plugins = { path = "../plugins" }
runtime = { path = "../runtime" }
serde_json.workspace = true
