[package]
name = "compat-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
commands = { path = "../commands" }
core-types = { path = "../core-types" }
decision-core = { path = "../decision-core" }
tools = { path = "../tools" }
runtime = { path = "../runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
