[package]
name = "core-types"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[lints]
workspace = true
