[package]
name = "plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[target.'cfg(unix)'.dependencies]
# Safe Unix process-group signalling (killpg); workspace lints forbid direct
# unsafe libc calls, so the timeout path routes group termination through nix.
nix = { version = "0.29", features = ["process", "signal"] }

[lints]
workspace = true
