[package]
name = "tools"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
codegraph = { path = "../codegraph" }
core-types = { path = "../core-types" }
plugins = { path = "../plugins" }
runtime = { path = "../runtime" }
base64 = "0.22"
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[lints]
workspace = true
